# geneweaver-api

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  README.MD  README.md  pyproject.toml  skaffold.yaml
.compass/: compass.yml
.github/workflows/: README.md  _check-coverage-action.yml  _format-lint-action.yml  _run-tests-action.yml  _skaffold-build-k8s.yml  _skaffold-deploy-k8s.yml  coverage.yml  pull_requests.yml  release.yml  style.yml  tests.yml
deploy/k8s/base/: configmap.yaml  deployment.yaml  global-labels.yaml  ingress.yaml  kustomization.yaml  service.yaml
deploy/k8s/overlays/jax-cluster-dev-10--dev/: ingress.yaml  kustomization.yaml
deploy/k8s/overlays/jax-cluster-dev-10--sqa/: ingress.yaml  kustomization.yaml
deploy/k8s/overlays/jax-cluster-prod-10--prod/: ingress.yaml  kustomization.yaml
deploy/k8s/overlays/jax-cluster-prod-10--stage/: configmap.yaml  ingress.yaml  kustomization.yaml
src/geneweaver/api/: __init__.py  dependencies.py  main.py
src/geneweaver/api/controller/: __init__.py  api.py  batch.py  genes.py  genesets.py  message.py  monitors.py  publications.py  search.py  species.py  utilities.py
src/geneweaver/api/core/: __init__.py  config.py  config_class.py  db.py  deps.py  exceptions.py  security.py
src/geneweaver/api/schemas/: __init__.py  apimodels.py  auth.py  batch.py  messages.py  score.py  search.py
src/geneweaver/api/services/: __init__.py  batch.py  genes.py  geneset.py  io.py  monitors.py  publications.py  pubmeds.py  species.py
src/geneweaver/api/services/parse/: __init__.py  batch.py
tests/: __init__.py
tests/api/unit/services/parse/batch/: conftest.py  const.py
tests/controllers/: __init__.py  conftest.py  test_api_standards.py  test_genes.py  test_genesets.py  test_monitor.py  test_publications.py  test_return_schemas.py  test_search.py  test_species.py
tests/core/: test_security.py
tests/data/: __init__.py  gene_maping.json  genes.json  geneset.json  homologus_ids.json  monitors.json  ontology.json  publications.json  response_geneset_1234.json  response_geneset_w_gene_id_type.json  security_jwt_RS256_keys.json  species.json
tests/services/: __init__.py  conftest.py  const.py  test_gene.py  test_genset.py  test_monitors.py  test_ontology.py  test_publications.py  test_species.py
tests/services/io/: __init__.py  test_read_file_contents.py
tests/services/parse/: __init__.py
tests/services/parse/batch/: __init__.py  const.py  test_parse.py
