[tool.poetry]
name = "geneweaver-api"
version = "0.0.1a0"
description = "description"
authors = ["Jax Computational Sciences <cssc@jax.org>"]
packages = [
    {include = "geneweaver/api", from = "src"},
    {include = "geneweaver/db", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.9"
geneweaver-core = "^0.2.0a0"
fastapi = {extras = ["all"], version = "^0.99.1"}
uvicorn = {extras = ["standard"], version = "^0.22.0"}
geneweaver-db = "^0.1.0a0"
psycopg-pool = "^3.1.7"
requests = "^2.31.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}

[tool.poetry.group.dev.dependencies]
geneweaver-testing = "^0.0.1b0"
pytest-asyncio = "^0.21.0"

[tool.ruff]
select = ['F', 'E', 'W', 'A', 'C90', 'N', 'B', 'ANN', 'D', 'I', 'ERA', 'PD', 'NPY', 'PT']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"




